<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.perfil"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Perfil"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/nombre"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidoEditEdit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:hint="Luis Fernando"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/apellidoP"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidoEdit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:hint="Vazquez"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/apellodpM"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellido2Edit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:hint="Ceballos"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/numeroC"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombreEdit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:enabled="true"
            android:hint="18O03019"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/correoI"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correoEdit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:enabled="true"
            android:hint="18O03019@itsx.edu.mx"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/cargo"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cargpEdit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:enabled="true"
            android:hint="Estuduiante"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/carrera"
            android:layout_marginLeft="50sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carreraEdit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:hint="Ingenieria en sistemas computacionales."/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/btnCambio"
            android:layout_gravity="center"
            android:text="GUARDAR CAMBIOS"/>
    </LinearLayout>


</ScrollView>