<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formRegistroActividad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registro"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/nombre"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/nombreRegist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/apellidoP"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidoP"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/apellidoRegist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/apellodpM"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellodpM"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/apellidoPRegist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/numeroC"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numeroC"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/numeroCRegist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="carrera"
            android:layout_marginLeft="20dp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinerRegisCarreras"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="semestre"
            android:layout_marginLeft="20dp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinerRegisSemestre"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="Nombre de la actividad."
            android:layout_marginLeft="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="{Nombre Actividad}"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/nombreActRegist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="Correo electrónico externo."
            android:layout_marginLeft="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo electrónico"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/correoERegist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="Archvo relacionado."
            android:layout_marginLeft="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Archivo"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/pahtEdit"/>
        <Button
            android:id="@+id/btnSearchFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#17277E"
            android:text="BuscarArchivos"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Regresar"
                android:id="@+id/btnSalir"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrarse"
                android:layout_marginLeft="30dp"
                android:id="@+id/terminarRegis"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>